--- a/bin/src/main/resources/application.properties
+++ b/bin/src/main/resources/application.properties
@@ -2,9 +2,9 @@
 spring.thymeleaf.cache = false
 
 # Database connection settings
-spring.datasource.url=jdbc:mysql://localhost:3306/warrior
-spring.datasource.username=Chris
-spring.datasource.password=guestguest
+spring.datasource.url=jdbc:mysql://localhost:3306/blogz
+spring.datasource.username=blogz
+spring.datasource.password=launchcode
 
 # Specify the DBMS
 spring.jpa.database = MYSQL
